--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,22 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Admin</title>
-  <base href="/">
+	<head>
+		<meta charset="utf-8">
+		<title>Admin</title>
+		<base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="assets/vendor.min.css">
-  <link rel="stylesheet" href="assets/elephant.min.css">
-  <link rel="stylesheet" href="assets/application.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/login-3.min.css">
-  <link rel="stylesheet" href="assets/profile.min.css">
-  <!-- <link rel="stylesheet" href="assets/inbox.min.css"> -->
-  <!-- <link rel="stylesheet" href="assets/bootstrap.min.css"> -->
-  <!-- <link rel="stylesheet" href="assets/store.min.css"> -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  <script src="js/jquery.min.js"></script>
-  <!-- <script src="js/profile.min.js"></script> 
-  <script src="js/demo.min.js"></script> --> 
-  <!-- <link href="http://fonts.googleapis.com/css?family=Arimo:400" rel="stylesheet"> -->
-  <!-- <script rel="stylesheet" src="assets/application.min.js"></script>
-  <script rel="stylesheet" src="assets/elephant.min.js"></script>
-  <script rel="stylesheet" src="assets/vendor.min.js"></script> -->
-</head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="stylesheet" href="assets/vendor.min.css">
+		<link rel="stylesheet" href="assets/elephant.min.css">
+		<link rel="stylesheet" href="assets/application.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="assets/profile.min.css">
+		<link rel="stylesheet" href="assets/inbox.min.css">
+		<link rel="stylesheet" href="assets/demo.min.css">
+		<link rel="stylesheet" href="assets/store.min.css">
+	</head>
 <body>
-  <app-root></app-root>
+	<app-root></app-root>
 </body>
 </html>
